# QueensGambit_FlipkartGrid_2026

./: PROJECT_APPROACH.txt  main.py  main2.ipynb  pyproject.toml  solution.ipynb  submission_lightgbm.csv
mukesh/: approach_prev.txt  predictions.csv  solution.ipynb  solution_prev.py  solution_v2.py
mukesh/new version/: approach.txt  predictions.csv  solution.ipynb
